# GOIT-Python_Web-HW-9

./: README.md  authors.json  pyproject.toml  quotes.json
